--- a/config/singbox/1.12.x/config.json
+++ b/config/singbox/1.12.x/config.json
@@ -111,6 +111,11 @@
       "auto_route": true,
       "auto_redirect": true,
       "strict_route": true
+    },
+    {
+      "type": "mixed",
+      "listen": "127.0.0.1",
+      "listen_port": 7890
     }
   ],
   "experimental": {
